--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
-{erl_opts, [debug_info]}.
+%% -*- mode: erlang;erlang-indent-level: 2;indent-tabs-mode: nil -*-
+%% ex: ft=erlang ts=2 sw=2 et
+{erl_opts, [debug_info, warnings_as_errors]}.
 {deps, [
-  {mochiweb, ".*",
-    {git, "git://github.com/mochi/mochiweb", {branch, "master"}}}
-]}.
+        {mochiweb, ".*",
+         {git, "git://github.com/mochi/mochiweb", {branch, "master"}}}
+       ]}.
 {cover_enabled, true}.
